# phylogeny

./: .gitignore  .~lock.tree.odg#  README.md  distance_plot.txt  remarques.txt  tree.odg
ancestor-estimator/: CMakeLists.txt  tmp1.pgm
ancestor-estimator/src/: dctextractor.h  main.cpp
articles/: Detection_non-aligned_double_JPEG_compression_with_estimation_primary_compression_parameters  biblio.bib
articles/icassp 2016/: Portion de message joint
cr/: .~lock.phylogeny.odg#  cr1.tex  phylogeny.odg  semaine1.html  semaine1.txt  semaine2.html  semaine2.txt
cr/article/: biblio.bib  ieeetran.cls  ipta-template.aux  ipta-template.bbl  ipta-template.blg  ipta-template.out  ipta-template.run.xml  ipta-template.tex  ipta-template.tex.bak
cr/biblio/: _region_.aux  _region_.out  _region_.tex  rapport.aux  rapport.bbl  rapport.blg  rapport.out  rapport.run.xml  rapport.tex  rapport.toc  s3  stageM2R.cls
cr/coresa/: presentation.aux  presentation.bbl  presentation.bcf  presentation.blg  presentation.nav  presentation.out  presentation.run.xml  presentation.tex  presentation.toc
cr/ipta/: soutenance.aux  soutenance.nav  soutenance.out  soutenance.run.xml  soutenance.snm  soutenance.tex  soutenance.toc
cr/presentation/: biblio.bib  presentation.aux  presentation.bbl  presentation.blg  presentation.nav  presentation.out  presentation.run.xml  presentation.tex  presentation.toc  set_to_tree.odg  transformation.odg
cr/presentation_bis/: presentation.aux  presentation.nav  presentation.out  presentation.run.xml  presentation.tex  presentation.toc
cr/rapport/: _region_.run.xml  biblio.bib  estimated.tex  estimated.tex.aux  rapport.aux  rapport.bbl  rapport.blg  rapport.out  rapport.run.xml  rapport.tex  rapport.toc  s1  s2  stageM2R.cls
cr/s1/: cr1.html
cr/s2/: #semaine2.txt#  semaine2.html  semaine2.txt
cr/s3/: algo.aux  algo.blg  algo.tex  semaine3.html  semaine3.txt
cr/s4/: semaine4.html  semaine4.txt
cr/s6/: #semaine6.txt#  .#semaine6.txt  semaine6.html  semaine6.txt
cr/s7/: semaine7.html  semaine7.txt
cr/s8/: semaine8.html  semaine8.txt
cr/s9/: #semaine9.txt#  .#semaine9.txt  semaine9.html  semaine9.txt  semaine9.txt.txt
cr/soutenance/: #soutenance.tex#  _region_.tex  soutenance.aux  soutenance.bbl  soutenance.blg  soutenance.nav  soutenance.out  soutenance.run.xml  soutenance.snm  soutenance.tex  soutenance.toc  tree_extract.odg
phylogeny-extractor/: CMakeLists.txt
phylogeny-generator/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  jpegtest.c
phylogeny-generator/src/: CImg.h  main.cpp  test.sh
results-generator/c++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
results-generator/c++/src/: dctextractor.h  main.cpp
tree-comparator/: CMakeLists.txt
tree-generator/: CMakeLists.txt
tree-generator/src/: main.cpp
(+7669 files in other folders)
